Use Actions cache

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -83,8 +83,8 @@ jobs:
         with:
           tags: ${{ matrix.images }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          cache-from: type=gha
+          cache-to: type=gha
           build-args: |
             WEBTREES_VERSION=${{ matrix.webtrees_version }}
             PHP_VERSION=${{ matrix.php_version }}
