--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,10 +11,8 @@ on:
         description: "Space-seperated version numbers to force update of"
 
 jobs:
-  getversions:
+  get-versions:
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
 
     permissions:
       contents: read
@@ -26,7 +24,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: .python-version
+          python-version: "3.12"
           cache: pip
 
       - name: Install Requirements
@@ -35,101 +33,50 @@ jobs:
           python -m pip install -r dev/requirements.txt
 
       - name: Get Versions
-        id: set-matrix
-        run: echo "matrix=$(python3 dev/versionchecker.py --forced ${{ inputs.forced }})" >> $GITHUB_OUTPUT
+        id: script
+        run: python3 dev/versionchecker.py --forced ${{ inputs.forced }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
-  buildversions:
-    needs: getversions
-    if: ${{ fromJSON(needs.getversions.outputs.matrix).include[0] != null }}
-    runs-on: ubuntu-latest
+    outputs:
+      matrixes: ${{ steps.script.outputs.matrixes }}
+
+  build-versions:
+    needs: get-versions
+    if: ${{ fromJSON(needs.get-versions.outputs.matrixes.builder).include[0] != null }}
     strategy:
-      matrix: ${{ fromJSON(needs.getversions.outputs.matrix) }}
+      matrix: ${{ fromJSON(needs.get-versions.outputs.matrixes.builder) }}
+
+    permissions:
+      contents: read
+      packages: write
+
+    uses: NathanVaughn/reusable-actions/.github/workflows/docker-build-push.yml@main
+    with:
+      platform: ${{ matrix.platform }}
+      tags: ${{ matrix.tags }}
+      context: docker
+      buildargs: |
+        WEBTREES_VERSION=${{ matrix.webtrees_version }}
+        PHP_VERSION=${{ matrix.php_version }}
+        PATCH_VERSION=${{ matrix.patch_version }}
+    secrets:
+      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+      dockerhub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  create-releases:
+    needs:
+      - get-versions
+      - build-versions
+
+    strategy:
+      matrix: ${{ fromJSON(needs.get-versions.outputs.matrixes.releaser) }}
 
     permissions:
       contents: write
-      packages: write
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          version: latest
-
-      - name: Dockerhub Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Github CR Login
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and Push
-        uses: docker/build-push-action@v5
-        with:
-          tags: ${{ matrix.images }}
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha
-          build-args: |
-            WEBTREES_VERSION=${{ matrix.webtrees_version }}
-            PHP_VERSION=${{ matrix.php_version }}
-            PATCH_VERSION=${{ matrix.patch_version }}
-          push: true
-
-      - name: Update DockerHub README
-        uses: christian-korneck/update-container-description-action@v1
-        env:
-          DOCKER_USER: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASS: ${{ secrets.DOCKERHUB_PASSWORD }}
-        with:
-          destination_container_repo: nathanvaughn/webtrees
-          provider: dockerhub
-          short_description: ${{ github.event.repository.description }}
-
-      # - name: Update Harbor README
-      #   uses: christian-korneck/update-container-description-action@v1
-      #   env:
-      #     DOCKER_USER: ${{ secrets.NTHNVCR_USERNAME }}
-      #     DOCKER_PASS: ${{ secrets.NTHNVCR_PASSWORD }}
-      #   with:
-      #     destination_container_repo: cr.nthnv.me/library/webtrees
-      #     provider: harbor2
-
-      - name: Create Tag
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag : ${{ matrix.webtrees_version }}
-
-      - name: Build Release Notes
-        id: release_notes
-        # https://trstringer.com/github-actions-multiline-strings/
-        run: |
-          echo "IMAGE_LIST<<EOF" >> $GITHUB_OUTPUT
-          python3 -c "m='${{ matrix.images }}';[print(f'- {i}') for i in m.split(',')]" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
-        with:
-          prerelease: ${{ matrix.prerelease }}
-          tag_name: ${{ matrix.webtrees_version }}
-          body: |
-            Automated release for webtrees version ${{ matrix.webtrees_version }}: ${{ matrix.src_url }}
-            Tags pushed:
-            ${{ steps.release_notes.outputs.IMAGE_LIST }}
+    uses: NathanVaughn/reusable-actions/.github/workflows/create-release.yml@main
+    with:
+      tag: ${{ matrix.tag }}
+      body: ${{ matrix.body }}
+      prerelease: ${{ matrix.prerelease }}
