--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   app:
     depends_on:
@@ -14,12 +12,12 @@ services:
       DB_HOST: "db"
       DB_PORT: "3306"
       DB_USER: "webtrees"
-      DB_PASS: "badpassword"
+      DB_PASS: "baddbpassword"
       DB_NAME: "webtrees"
       DB_PREFIX: "wt_"
       WT_USER: "username"
       WT_NAME: "Full Name"
-      WT_PASS: "mybadpassword"
+      WT_PASS: "badwtpassword"
       WT_EMAIL: "me@example.com"
       PUID: "1000"
       PGID: "1000"
@@ -36,8 +34,8 @@ services:
     environment:
       MARIADB_DATABASE: "webtrees"
       MARIADB_USER: "webtrees"
-      MARIADB_ROOT_PASSWORD: "badpassword"
-      MARIADB_PASSWORD: "badpassword"
+      MARIADB_ROOT_PASSWORD: "badrootpassword"
+      MARIADB_PASSWORD: "baddbpassword"
     image: docker.io/library/mariadb:latest
     restart: unless-stopped
     volumes:
