--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,11 +21,17 @@ RUN apt-get update \
     unzip \
     --no-install-recommends \
  && rm -rf /var/lib/apt/lists/*
+
 # install php extensions
-RUN pecl install imagick \
+# https://github.com/Imagick/imagick/issues/640#issuecomment-2470204174
+ADD --chmod=0755 \
+  https://github.com/mlocati/docker-php-extension-installer/releases/download/2.6.3/install-php-extensions \
+  /usr/local/bin/
+RUN install-php-extensions imagick/imagick@28f27044e435a2b203e32675e942eb8de620ee58 \
  && docker-php-ext-enable imagick \
  && docker-php-ext-configure gd --with-freetype --with-jpeg \
  && docker-php-ext-install -j"$(nproc)" pdo pdo_mysql pdo_pgsql zip intl gd exif
+
 # remove old apt stuff
 RUN apt-get purge gcc g++ make -y \
  && apt-get autoremove -y \
@@ -35,6 +41,7 @@ RUN apt-get purge gcc g++ make -y \
 ARG WEBTREES_VERSION
 RUN curl -s -L https://github.com/fisharebest/webtrees/releases/download/${WEBTREES_VERSION}/webtrees-${WEBTREES_VERSION}.zip -o webtrees.zip \
  && unzip -q webtrees.zip -d /var/www/ && rm webtrees.zip
+
 # Disable version update prompt. Webtrees should not be upgrading itself,
 # users should be using tagged container versions
 ARG PATCH_VERSION
