--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       HTTPS: "0"
       HTTPS_REDIRECT: "0"
       LANG: "en-US"
-      BASE_URL: "http://localhost"
+      BASE_URL: "http://localhost:80"
       DB_TYPE: "mysql"
       DB_HOST: "db"
       DB_PORT: "3306"
