--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,12 +27,7 @@ RUN apt-get update \
  && rm -rf /var/lib/apt/lists/*
 
 # install php extensions
-# https://github.com/Imagick/imagick/issues/640#issuecomment-2470204174
-# This is only an issue on ARM64
-ADD --chmod=0755 \
-  https://github.com/mlocati/docker-php-extension-installer/releases/download/2.6.3/install-php-extensions \
-  /usr/local/bin/
-RUN install-php-extensions imagick/imagick@28f27044e435a2b203e32675e942eb8de620ee58 \
+RUN pecl install imagick \
  && docker-php-ext-enable imagick \
  && docker-php-ext-configure gd --with-freetype --with-jpeg \
  && docker-php-ext-install -j"$(nproc)" pdo pdo_mysql pdo_pgsql zip intl gd exif
