--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,14 +79,14 @@ jobs:
           version: latest
 
       - name: DockerHub Login
-        if: contains(matrix.tags, 'docker.io')
+        if: contains(join(matrix.tags), 'docker.io')
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.dockerhub_username }}
-          password: ${{ secrets.dockerhub_password }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Github CR Login
-        if: contains(matrix.tags, 'ghcr.io')
+        if: contains(join(matrix.tags), 'ghcr.io')
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
